...
                    checkIsValid = { commentViewModel.isInvalidCollector() },
                    options = options,
                    isInvalidCollector = commentViewModel.isInvalidCollector,
                    collector = commentViewModel.collector,
                )

                StarRatingSelect(
                    maxStars = 5, rating = commentViewModel.rating
                )

                CommentAlbumInput(
                    messageSupport = { commentViewModel.showCommentSupportText(LocalContext.current) },
                    checkIsValid = { commentViewModel.isInvalidComment() },
...
                modifier = Modifier
                    .selectable(selected = isSelected, onClick = {
                        rating.value = i
                    })
                    .width(50.dp)
                    .height(50.dp)
                    .testTag("ratingComment")
                    .semantics {
                        stateDescription = if (isSelected) {
                            starSelected
                        } else {
                            starNotSelected
                        }
...
