...
        }

        is ArtistsListUiState.Loading -> {
            CircularProgressIndicator(
                modifier = Modifier
                    .padding(8.dp)
                    .testTag("loadingArtists")
            )
        }
    }

}

...
